--- a/information/index.html
+++ b/information/index.html
@@ -155,66 +155,30 @@
                     </div>
                     <div class="date-info finish">
                         <h6>Tutup</h6>
-                        <h5>2 Juni 2023</h5>
+                        <h5>4 Juni 2023</h5>
                     </div>
                 </div>
                 <div class="right-line-info">
                     <div class="date-line"></div>
                 </div>
-                <!-- <div class="time-container">
+                <div class="time-container">
                     <div class="container-segment">
-                        <div class="segment-title">DAYS</div>
-                            <div class="segment">
-                                <div class="flip-card" data-days-tens>
-                                <div class="top">3</div>
-                                <div class="bottom">3</div>
-                            </div>
-                            <div class="flip-card" data-days-ones>
-                                <div class="top">2</div>
-                                <div class="bottom">2</div>
-                            </div>
-                        </div>
+                        <h5 class="segment-title">HARI</h5>
+                        <h6 class="segment-time days">00</h6>
                     </div>
                     <div class="container-segment">
-                        <div class="segment-title">HOURS</div>
-                            <div class="segment">
-                                <div class="flip-card" data-hours-tens>
-                                <div class="top">2</div>
-                                <div class="bottom">2</div>
-                            </div>
-                            <div class="flip-card" data-hours-ones>
-                                <div class="top">4</div>
-                                <div class="bottom">4</div>
-                            </div>
-                        </div>
+                        <h5 class="segment-title">JAM</h5>
+                        <h6 class="segment-time hours">00</h6>
                     </div>
                     <div class="container-segment">
-                        <div class="segment-title">MINUTES</div>
-                            <div class="segment">
-                                <div class="flip-card" data-minutes-tens>
-                                <div class="top">0</div>
-                                <div class="bottom">0</div>
-                            </div>
-                            <div class="flip-card" data-minutes-ones>
-                                <div class="top">0</div>
-                                <div class="bottom">0</div>
-                            </div>
-                        </div>
+                        <h5 class="segment-title">MENIT</h5>
+                        <h6 class="segment-time minutes">00</h6>
                     </div>
                     <div class="container-segment">
-                        <div class="segment-title">Seconds</div>
-                            <div class="segment">
-                                <div class="flip-card" data-seconds-tens>
-                                <div class="top">0</div>
-                                <div class="bottom">0</div>
-                            </div>
-                            <div class="flip-card" data-seconds-ones>
-                                <div class="top">0</div>
-                                <div class="bottom">0</div>
-                            </div>
-                        </div>
+                        <h5 class="segment-title">DETIK</h5>
+                        <h6 class="segment-time seconds">00</h6>
                     </div>
-                </div> -->
+                </div>
                 <div class="validation-btn-section">
                     <a href="https://forms.gle/sXfAJJ5ud771Fod57" class="validation-btn" target="_blank">DAFTAR</a>
                 </div>
