--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="comingsoon.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -35,7 +34,7 @@
 </head>
 
 <body>
-    <!-- <a href="#" class="scroll-top">
+    <a href="#" class="scroll-top">
         <i class='bx bxs-chevrons-up' ></i>
     </a>
     <nav class="navbar-section container">
@@ -469,50 +468,9 @@
                 <h5 class="footer-text-bottom">Design by <a href="https://ngabskyy.netlify.app" target="_blank"><span class="design-name">Kyy</span></a></h5>
             </div>
         </div>
-    </div> -->
+    </div>
 
-    <!-- <span class="bar"><i class="fa fa-bars"></i></span>
-  <nav class="toggle-nav">
-    <ul class="listing">
-      <li>
-        <a href="https://www.instagram.com/stackfindover">
-          <i class="fa fa-instagram"></i>
-        </a>
-      </li>
-    </ul>
-</nav> -->
-<header class="header-comingsoon">
-    <div class="header-logo">
-        <img src="images/Maskot-Event.png" alt="" class="logo-comingsoon">
-        <h4 class="title-comingsoon">BARATA MADYA XI SMANTA</h4>
-    </div>
-    <div class="header-icon">
-        <a href="https://www.instagram.com/stackfindover" target="_blank" class="icon-link">
-            <i class="fa fa-instagram icon"></i>
-        </a>
-    </div>
-</header>
-  <section class="coming-soon">
-    <div class="coming-soon-inner">
-      <h1 class="heading">Segera Hadir</h1>
-      <h2 class="small-heading">dalam pembuatan</h2>
-      <div class="counter-timer">
-        <ul>
-            <li><span id="days"></span>Hari</li>
-            <li><span id="hours"></span>Jam</li>
-            <li><span id="minutes"></span>Menit</li>
-            <li><span id="seconds"></span>Detik</li>
-          </ul>
-        </div>
-    </div>
-</section>
-<footer class="footer-comingsoon">
-    <h5 class="footer-title">Copyright © BARATA MADYA XI SMANTA</h5>
-    <h5 class="footer-text-bottom">Design by <a href="https://ngabskyy.netlify.app" target="_blank"><span class="design-name">Kyy</span></a></h5>
-</footer>
-
-    <!-- <script type="module" src="./utils/login-popup.js"></script>
-    <script type="module" src="./main.js"></script> -->
-    <script type="module" src="./comingsoon.js"></script>
+    <script type="module" src="./utils/login-popup.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
