Completed text FAQ and closed access login

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h5 class="home-sub-title">Tingkat Madya SMP/MTs Se-Eks Karesidenan Kediri Terbuka</h5>
             <h5 class="home-description">Dengan BARATA MADYA, Semangat Menggapai Asa, Membangun Generasi Cerdas Penerus Bangsa.</h5>
             <div class="home-btn-container">
-                <a href="#" class="home-btn">Petunjuk Umum</a>
+                <a href="./files/JUKLAK_JUKNIS_BARATA_MADYA_XI.pdf" download  class="home-btn">Petunjuk Umum</a>
             </div>
         </div>
     </div>
@@ -394,29 +394,29 @@
                     </li>
                     <li>
                         <div class="question-arrow">
-                            <span class="question">Lorem ipsum dolor sit amet, consectetur adipisicing elit?</span>
+                            <span class="question">Bagaimana mengunduh berkas?</span>
                             <i class='icon bx bxs-chevron-down arrow'></i>
                             <i class='icon bx bxs-chevron-up arrow-active'></i>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur nesciunt officia architecto necessitatibus laudantium sint alias recusandae expedita perspiciatis nostrum.</p>
+                        <p>Silahkan kakak unduh berkas melalui halaman informasi kami, kami sudah menyediakan beberapa file yang siap diunduh.</p>
                         <span class="line"></span>
                     </li>
                     <li>
                         <div class="question-arrow">
-                            <span class="question">Lorem ipsum dolor sit amet, consectetur adipisicing elit?</span>
+                            <span class="question">Mengapa tidak bisa mengunduh berkas?</span>
                             <i class='icon bx bxs-chevron-down arrow'></i>
                             <i class='icon bx bxs-chevron-up arrow-active'></i>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem veritatis itaque illo amet commodi accusantium, ad autem. Recusandae, commodi eum.</p>
+                        <p>Kakak harus masuk terlebih dahulu menggunakan akun yang sudah kami sediakan melalui email.</p>
                         <span class="line"></span>
                     </li>
                     <li>
                         <div class="question-arrow">
-                            <span class="question">Lorem ipsum dolor sit amet, consectetur adipisicing elit?</span>
+                            <span class="question">Bagaimana cara mendapatkan akun?</span>
                             <i class='icon bx bxs-chevron-down arrow'></i>
                             <i class='icon bx bxs-chevron-up arrow-active'></i>
                         </div>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium fugit nobis provident quo voluptatem eos recusandae sunt tempore quibusdam excepturi.</p>
+                        <p>Kakak harus daftar di kompetisi kami untuk mendapatkan akun. Kami akan mengirimkan otomatis akun kakak melalui email.</p>
                         <span class="line"></span>
                     </li>
                 </ul>
