--- a/information/index.html
+++ b/information/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="../images/FavAssets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../images/FavAssets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../images/FavAssets/favicon-16x16.png">
-    <link rel="manifest" href="../images/FavAssets/site.webmanifest">
+    <!-- <link rel="manifest" href="../images/FavAssets/site.webmanifest"> -->
     <link rel="mask-icon" href="../images/FavAssets/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
@@ -38,10 +38,12 @@
             <a href="../" class="main-option-navbar">Beranda</a>
             <!-- <a href="../champion/" class="main-option-navbar-2">Pemenang</a> -->
             <button class="btnNon btnActive">Masuk</button>
+            <button class="btnUnon btnUnactive btn-hidden">Keluar</button>
         </div>
         <div class="sign-btn-container">
             <!-- <a href="" class="sign-btn login-btn btn btnLogin-popup">Masuk</a> -->
             <button class="sign-btn login-btn btn btnLogin-popup">Masuk</button>
+            <button class="logout-btn btn btnLogout-popup btn-hidden">Keluar</button>
         </div>
         <div class="menu-icon">
             <div class="line1"></div>
@@ -57,7 +59,7 @@
                     <i class="bi bi-x"></i>
                 </span>
                 <h2>Masuk</h2>
-                <form class="login-form">
+                <div class="login-form">
                     <div class="input-box">
                         <div class="icon">
                             <i class="bi bi-person"></i>
@@ -74,16 +76,13 @@
                         <label for="">Password</label>
                     </div>
                     <div class="remember-forgot">
-                        <label for="">
-                            <input type="checkbox" name="">Ingat saya
-                        </label>
                         <a href="">Lupa Password?</a>
                     </div>
                     <input type="submit" class="btn form-btn"></input>
                     <div class="login-register">
                         <p>Belum memiliki akun? <a href="https://forms.gle/sXfAJJ5ud771Fod57" target="_blank" class="register-link">Daftar</a></p>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     <!-- </div> -->
@@ -102,7 +101,7 @@
                     </div>
                     <div class="validate-upload-info validate-btn">
                         <i class="bi bi-cloud-arrow-down"></i>
-                        <a href="" class="download-title download">Unduh File</a>
+                        <button class="download-title download">Unduh File</button>
                     </div>
                 </div>
                 <div class="tags-info">
@@ -181,6 +180,7 @@
                 </div>
                 <div class="validation-btn-section">
                     <a href="https://forms.gle/sXfAJJ5ud771Fod57" class="validation-btn" target="_blank">DAFTAR</a>
+                    <a href="#" class="validation-btn-closed validation-btn-off">DITUTUP</a>
                 </div>
             </div>
     </div>
