Add text animation in home and information page

--- a/information/index.html
+++ b/information/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta property="og:title" content="BARATA MADYA XI SMANTA 2023: Informasi Lomba">
+    <meta property="og:description" content="Dengan BARATA MADYA, Semangat Menggapai Asa, Membangun Generasi Cerdas Penerus Bangsa.">
+    <meta property="og:image" content="images/Maskot-Event.png">
+    <meta name="keywords" content="barata madya xi smanta, smanta, Barata Madya XI Smanta, PMR Smanta, Praja Wira Smanta, Barata Madya, sma negeri 01 talun, SMA Negeri 01 Talun, SMAN 01 Talun, Subseksi smanta, PMR blitar, Subseksi berbasis website, Subseksi modern">
+
     <!-- FAV ICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="../images/FavAssets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../images/FavAssets/favicon-32x32.png">
@@ -22,6 +27,10 @@
 
     <!-- Sweet alert 2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js" integrity="sha256-t0FDfwj/WoMHIBbmFfuOtZv1wtA977QCfsFR3p1K4No=" crossorigin="anonymous"></script>
+
+    <!-- AOS Animation -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     
 
 </head>
@@ -90,25 +99,25 @@
     <div class="main-info-page">
             <div class="left-info-section">
                 <div class="left-title-info">
-                    <h2>BARATA MADYA XI SMANTA</h2>
-                    <h5>Dengan BARATA MADYA, Semangat Menggapai Asa, Membangun Generasi Cerdas Penerus Bangsa.</h5>
-                    <h6>by <span>Praja Wira SMANTA</span></h6>
+                    <h2 data-aos="fade-up" data-aos-delay="50">BARATA MADYA XI SMANTA</h2>
+                    <h5 data-aos="fade-up" data-aos-delay="100">Dengan BARATA MADYA, Semangat Menggapai Asa, Membangun Generasi Cerdas Penerus Bangsa.</h5>
+                    <h6 data-aos="fade-up" data-aos-delay="150">by <span>Praja Wira SMANTA</span></h6>
                 </div>
                 <div class="validate-info">
-                    <div class="validate-upload-info validate-btn">
+                    <div class="validate-upload-info validate-btn" data-aos="fade-up" data-aos-delay="200">
                         <i class="bi bi-cloud-arrow-up"></i>
                         <a href="https://forms.gle/F4NpTpic9QtYRpws8" target="_blank" class="upload-title">Unggah File</a>
                     </div>
-                    <div class="validate-upload-info validate-btn">
+                    <div class="validate-upload-info validate-btn" data-aos="fade-up" data-aos-delay="250">
                         <i class="bi bi-cloud-arrow-down"></i>
                         <button class="download-title download">Unduh File</button>
                     </div>
                 </div>
                 <div class="tags-info">
-                    <h6 class="tag-info tags1">SMAN 01 Talun</h6>
-                    <h6 class="tag-info tags2">PMR</h6>
-                    <h6 class="tag-info tags3">Kompetisi</h6>
-                    <div class="share-info">
+                    <h6 class="tag-info tags1" data-aos="fade-up" data-aos-delay="300">SMAN 01 Talun</h6>
+                    <h6 class="tag-info tags2" data-aos="fade-up" data-aos-delay="350">PMR</h6>
+                    <h6 class="tag-info tags3" data-aos="fade-up" data-aos-delay="400">Kompetisi</h6>
+                    <div class="share-info" data-aos="fade-up" data-aos-delay="450">
                         <i class="bi bi-share-fill"></i>
                     </div>
                 </div>
@@ -120,11 +129,11 @@
                     <div class="content">
                       <p>Bagikan link ini lewat</p>
                       <ul class="icons">
-                        <a href="https://web.facebook.com/sharer.php?u=sciesixx.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://twitter.com/intent/tweet?url=sciesixx.com&text=science six" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="https://lineit.line.me/share/ui?url=sciesixx.com&text=Science Six" target="_blank"><i class="bi bi-line"></i></a>
-                        <a href="https://api.whatsapp.com/send?phone?&text=sciesixx.com" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                        <a href="https://telegram.me/share/url?url=sciesixx.com&text=Science Sixx" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+                        <a href="https://web.facebook.com/sharer.php?u=https://baratamadyaxi-smanta.site" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/intent/tweet?url=https://baratamadyaxi-smanta.site&text=BARATA MADYA XI SMANTA" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://lineit.line.me/share/ui?url=https://baratamadyaxi-smanta.site&text=BARATA MADYA XI SMANTA" target="_blank"><i class="bi bi-line"></i></a>
+                        <a href="https://api.whatsapp.com/send?phone?&text=https://baratamadyaxi-smanta.site" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://telegram.me/share/url?url=https://baratamadyaxi-smanta.site&text=BARATA MADYA XI SMANTA" target="_blank"><i class="fab fa-telegram-plane"></i></a>
                       </ul>
                       <p>Atau salin link</p>
                       <div class="field">
@@ -136,94 +145,54 @@
                 </div>
             </div>
             <div class="right-info-section">
-                <div class="right-icon-section">
+                <div class="right-icon-section" data-aos="fade-down">
                     <img src="../images/techny-time-management.png" alt="" class="right-icon">
                 </div>
-                <div class="right-title-info">
+                <div class="right-title-info" data-aos="fade-down">
                     <h4>PENDAFTARAN</h4>
                 </div>
                 <div class="right-date-info">
                     <div class="date-info start">
-                        <h6>Buka</h6>
-                        <h5>1 Mei 2023</h5>
+                        <h6 data-aos="fade-up" data-aos-delay="50">Buka</h6>
+                        <h5 data-aos="fade-up" data-aos-delay="150">1 Mei 2023</h5>
                     </div>
                     <div class="date-info mid">
-                        <h5 class="month">JAN</h5>
-                        <h4 class="date-day">3</h4>
-                        <h6 class="day">RABU</h6>
+                        <h5 class="month" data-aos="fade-down" data-aos-delay="50">JAN</h5>
+                        <h4 class="date-day" data-aos="fade-down" data-aos-delay="150">3</h4>
+                        <h6 class="day" data-aos="fade-down" data-aos-delay="250">RABU</h6>
                     </div>
                     <div class="date-info finish">
-                        <h6>Tutup</h6>
-                        <h5>4 Juni 2023</h5>
+                        <h6 data-aos="fade-up" data-aos-delay="50">Tutup</h6>
+                        <h5 data-aos="fade-up" data-aos-delay="150">4 Juni 2023</h5>
                     </div>
                 </div>
                 <div class="right-line-info">
-                    <div class="date-line"></div>
+                    <div class="date-line" data-aos="fade-down" data-aos-delay="50"></div>
                 </div>
                 <div class="time-container">
-                    <div class="container-segment">
+                    <div class="container-segment" data-aos="fade-up" data-aos-delay="50">
                         <h5 class="segment-title">HARI</h5>
                         <h6 class="segment-time days">00</h6>
                     </div>
-                    <div class="container-segment">
+                    <div class="container-segment" data-aos="fade-up" data-aos-delay="100">
                         <h5 class="segment-title">JAM</h5>
                         <h6 class="segment-time hours">00</h6>
                     </div>
-                    <div class="container-segment">
+                    <div class="container-segment" data-aos="fade-up" data-aos-delay="150">
                         <h5 class="segment-title">MENIT</h5>
                         <h6 class="segment-time minutes">00</h6>
                     </div>
-                    <div class="container-segment">
+                    <div class="container-segment" data-aos="fade-up" data-aos-delay="200">
                         <h5 class="segment-title">DETIK</h5>
                         <h6 class="segment-time seconds">00</h6>
                     </div>
                 </div>
-                <div class="validation-btn-section">
+                <div class="validation-btn-section" data-aos="fade-up" data-aos-delay="250">
                     <a href="https://forms.gle/sXfAJJ5ud771Fod57" class="validation-btn" target="_blank">DAFTAR</a>
                     <a href="#" class="validation-btn-closed validation-btn-off">DITUTUP</a>
                 </div>
             </div>
     </div>
-
-    <div class="more-info-section">
-        <div class="scroll text1">
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-                <div>
-                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- <div class="competition-branch-page">
-        
-    </div> -->
 
     <div class="more-info-section">
         <div class="scroll text1">
@@ -262,11 +231,11 @@
 
     <div class="timeline-section">
         <div class="timeline-wrapper">
-            <div class="center-line">
+            <div class="center-line" data-aos="fade-up" data-aos-delay="300">
                 <a href="#" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
             </div>
             <div class="row row-1">
-                <section>
+                <section data-aos="fade-up" data-aos-delay="50">
                     <i class="icon bi-person-lines-fill"></i>
                     <div class="details">
                         <span class="title">Pendaftaran</span>
@@ -280,7 +249,7 @@
                 </section>
             </div>
             <div class="row row-2">
-                <section>
+                <section data-aos="fade-up" data-aos-delay="100">
                     <i class="icon fa-solid fa-handshake"></i>
                     <div class="details">
                         <span class="title">Technical Meeting</span>
@@ -294,7 +263,7 @@
                 </section>
             </div>
             <div class="row row-3">
-                <section>
+                <section data-aos="fade-up" data-aos-delay="150">
                     <i class="icon fa-solid fa-calendar-check"></i>
                     <div class="details">
                         <span class="title">Pelaksanaan</span>
